--- a/frontend/src/assets/sass/form.scss
+++ b/frontend/src/assets/sass/form.scss
@@ -21,6 +21,62 @@
   color: $gray-500;
 }
 
+// CALENDAR CONTROL
+.datepicker-nav-icon {
+  top: 5px;
+}
+
+.datepicker-nav-icon-hidden {
+  visibility: hidden;
+}
+
+.datepicker-nav-icon-visible {
+  visibility: visible;
+}
+
+.react-datepicker__input-container input {
+  padding: 6px 10px 5px 10px;
+  width: 100%;
+  background-color: hsl(0, 0%, 95%);
+  border-color: hwb(0 90% 10%);
+  color: hsl(0, 0%, 60%);
+  border-radius: 4px;
+  border-style: solid;
+  border-width: 1px;
+  box-sizing: border-box;
+}
+
+.react-datepicker__view-calendar-icon input {
+  padding: 6px 10px 5px 32px;
+  width: 100%;
+  background-color: hsl(0, 0%, 100%);
+  border-color: hsl(0, 0%, 80%);
+  color: black;
+  border-radius: 4px;
+  border-style: solid;
+  border-width: 1px;
+  box-sizing: border-box;
+}
+
+.react-datepicker__input-container > .react-datepicker__calendar-icon {
+  padding: 0px;
+  margin: 10px;
+  position: absolute;
+}
+
+.datepicker-disabled > .react-datepicker__view-calendar-icon input {
+  background-color: hsl(0, 0%, 95%);
+  border-color: hwb(0 90% 10%);
+  color: hsl(0, 0%, 60%);
+}
+
+//override -- default is one pixel too high
+.react-datepicker-popper[data-placement^="bottom"] .react-datepicker__triangle {
+  top: 0;
+  margin-top: -7px;
+  background: #fff;
+}
+
 // CHECKBOX
 .form-check-input {
   cursor: pointer;
@@ -50,7 +106,28 @@
   }
 }
 
+// RADIO GROUPS
+.comp-radio-btn {
+  display: flex;
+  align-items: center;
+  min-height: 34px;
+  input {
+    margin-top: 0;
+    margin-right: 0.5rem;
+  }
+}
+
 // CUSTOM ERROR MESSAGE
+.error-message {
+  display: block;
+  font-size: 0.875rem;
+  color: $bc-gov-danger;
+}
+
+.error-message:empty {
+  display: none;
+}
+
 .comp-form-error-msg {
   display: flex;
   align-items: flex-start;
@@ -60,4 +137,12 @@
     margin-left: 1px;
     margin-right: 6px;
   }
+}
+
+//LAT/LONG INPUTS
+.comp-lat-long-input {
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 8px;
+  max-width: 500px;
 }
