--- a/frontend/src/assets/sass/hwcr-equipment.scss
+++ b/frontend/src/assets/sass/hwcr-equipment.scss
@@ -1,17 +1,50 @@
 @import "./colours.scss";
 
-.copy-text {
+.hwcr-equipment-card {
+  position: relative;
+  margin-bottom: 16px;
+  padding-left: 6px;
+
+  &::before {
+    content: " ";
+    position: absolute;
+    top: -1px;
+    bottom: -1px;
+    left: -1px;
+    width: 8px;
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+  }
+
+  &.active {
+    &::before {
+      background-color: $bc-gov-success;
+    }
+  }
+
+  &.inactive {
+    &::before {
+      background-color: $gray-200;
+      opacity: 0.5;
+    }
+  }
+}
+
+.hwcr-equipment-badge-active {
+  background-color: $bc-gov-success !important;
+}
+
+.hwcr-equipment-badge-inactive {
+  background-color: $gray-200 !important;
+}
+
+.hwcr-equipment-card .copy-text {
   text-align: left;
   font-size: 14px;
   color: $gray-500;
   text-decoration: underline;
   cursor: pointer;
   margin-left: 191px;
-}
-
-.equipment-form-edit-container {
-  display: flex;
-  margin: 30px 0px;
 }
 
 .equipment-form-label-input-pair {
