--- a/frontend/src/assets/sass/misc.scss
+++ b/frontend/src/assets/sass/misc.scss
@@ -184,6 +184,13 @@
     line-height: 2rem;
   }
 
+  &-xs::before {
+    width: 1.65rem;
+    height: 1.65rem;
+    font-size: 0.675rem;
+    line-height: 1.65rem;
+  }
+
   span {
     flex: 1 1 auto;
     overflow: hidden;
@@ -279,54 +286,6 @@
 
 .bs-popover-bottom > .popover-arrow {
   margin-top: 1px;
-}
-
-.datepicker-nav-icon {
-  top: 5px;
-}
-
-.datepicker-nav-icon-hidden {
-  visibility: hidden;
-}
-
-.datepicker-nav-icon-visible {
-  visibility: visible;
-}
-
-.react-datepicker__input-container input {
-  padding: 6px 10px 5px 10px;
-  width: 100%;
-  background-color: hsl(0, 0%, 95%);
-  border-color: hwb(0 90% 10%);
-  color: hsl(0, 0%, 60%);
-  border-radius: 4px;
-  border-style: solid;
-  border-width: 1px;
-  box-sizing: border-box;
-}
-
-.react-datepicker__view-calendar-icon input {
-  padding: 6px 10px 5px 32px;
-  width: 100%;
-  background-color: hsl(0, 0%, 100%);
-  border-color: hsl(0, 0%, 80%);
-  color: black;
-  border-radius: 4px;
-  border-style: solid;
-  border-width: 1px;
-  box-sizing: border-box;
-}
-
-.react-datepicker__input-container > .react-datepicker__calendar-icon {
-  padding: 0px;
-  margin: 10px;
-  position: absolute;
-}
-
-.datepicker-disabled > .react-datepicker__view-calendar-icon input {
-  background-color: hsl(0, 0%, 95%);
-  border-color: hwb(0 90% 10%);
-  color: hsl(0, 0%, 60%);
 }
 
 .filter-pill-close {
