--- a/frontend/src/assets/sass/complaint.scss
+++ b/frontend/src/assets/sass/complaint.scss
@@ -471,6 +471,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 16px;
+    margin-bottom: 0;
 
     > div {
       display: flex;
@@ -524,7 +525,7 @@
     margin-bottom: 1.25rem;
   }
 
-  &.border-danger {
+  .card.border-danger {
     border-width: 3px;
 
     .card-body {
