CE-687 - Refactor Equipment Details and Form

--- a/frontend/src/assets/sass/complaint.scss
+++ b/frontend/src/assets/sass/complaint.scss
@@ -425,14 +425,12 @@
   padding: 24px;
 
   h2 {
-    font-size: 1.5rem;
     font-weight: 700;
     line-height: normal;
   }
 
   h3 {
     margin-bottom: 1rem;
-    font-size: 1rem;
     font-weight: 700;
   }
 
@@ -452,7 +450,6 @@
 
   h2 {
     margin: 0;
-    font-size: 1.5rem;
     font-weight: 700;
   }
 
@@ -498,6 +495,10 @@
       margin: 0;
       padding-left: 1.5rem;
     }
+
+    .comp-avatar {
+      margin: -0.25rem;
+    }
   }
 
   pre {
@@ -522,7 +523,7 @@
   }
 
   .section-error-message {
-    margin-bottom: 1.25rem;
+    margin-bottom: 1rem;
   }
 
   .card.border-danger {
@@ -626,10 +627,6 @@
       flex: 1 1 auto;
     }
   }
-
-  div + .error-message {
-    margin-top: 4px;
-  }
 }
 
 .comp-details-form-row {
@@ -639,6 +636,12 @@
 
   > label {
     width: 12rem;
+    color: $gray-500;
+  }
+
+  > legend {
+    width: 12rem;
+    font-weight: 400;
     color: $gray-500;
   }
 
@@ -652,7 +655,8 @@
     flex-direction: row;
     gap: 16px;
 
-    > label {
+    > label,
+    > legend {
       flex: 0 0 auto;
       margin-top: 6px;
       width: 16rem;
@@ -662,7 +666,8 @@
 
 @include media-breakpoint-up(xl) {
   .comp-details-form-row {
-    > label {
+    > label,
+    > legend {
       width: 18rem;
     }
   }
@@ -1816,10 +1821,6 @@ p {
 
 .input-field-select__option {
   min-height: 35px;
-}
-
-.error-message {
-  color: $bc-gov-danger;
 }
 
 .error-border {
