--- a/frontend/src/assets/sass/typography.scss
+++ b/frontend/src/assets/sass/typography.scss
@@ -23,3 +23,25 @@
   font-style: normal;
   font-family: "BC Sans";
 }
+
+.comp-app-container {
+  h1 {
+    font-size: 1.75rem;
+    font-weight: 700;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+    font-weight: 700;
+  }
+
+  h3 {
+    font-size: 1.25rem;
+    font-weight: 700;
+  }
+
+  h4 {
+    font-size: 1.125rem;
+    font-weight: 700;
+  }
+}
